# bazel-bench

./: .bazelrc  .gitignore  BUILD  ISSUE_TEMPLATE.md  MODULE.bazel  PULL_REQUEST_TEMPLATE.md  README.md  WORKSPACE  a.html  benchmark.py  benchmark.sh  benchmark_test.py  requirements.txt
.bazelci/: postsubmit.yml  presubmit.yml
py3-a/share/python-wheels/: pip-18.1-py2.py3-none-any.whl  retrying-1.3.3-py2.py3-none-any.whl  six-1.12.0-py2.py3-none-any.whl
report/: BUILD  generate_master_report.py  generate_report.py
testutils/: BUILD  __init__.py  fakes.py
utils/: BUILD  bazel.py  bazel_args_parser.py  bazel_args_parser_test.py  bazel_test.py  benchmark_config.py  benchmark_config_test.py  bigquery_upload.py  config.py.example  json_profiles_merger.py  json_profiles_merger_lib.py  json_profiles_merger_lib_test.py  logger.py  output_handling.py  storage_upload.py  storage_upload_gsutil.py  values.py  values_test.py
