module(
    name = "bazel-bench",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_python",
    version = "0.35.0",
)

# -- bazel_dep definitions -- #
python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
    dev_dependency = True,
)
python.toolchain(
    python_version = "3.10",
)

pip = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
    dev_dependency = True,
)

pip.parse(
    hub_name = "third_party",
    python_version = "3.10",
    requirements_lock = "//third_party:requirements.txt",
)
use_repo(pip, "third_party")
